# windows-search-tool

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json
benchmark/: benchmark.ps1
src/: App.css  App.tsx  Settings.css  Settings.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  icons.rs  indexer.rs  launcher.rs  main.rs  search.rs
src/themes/: amoled.json  aura.json  ayu.json  carbonfox.json  catppuccin-frappe.json  catppuccin-macchiato.json  catppuccin.json  cobalt2.json  dracula.json  everforest.json  flexoki.json  github.json  gruvbox.json  kanagawa.json  lucent-orng.json  material.json  matrix.json  mercury.json  monokai.json  nightowl.json  nord.json  oc-2.json  one-dark.json  onedarkpro.json  orng.json  osaka-jade.json  palenight.json  rosepine.json  shadesofpurple.json  solarized.json  synthwave84.json  tokyonight.json  vercel.json  vesper.json  zenburn.json
src/utils/: theme.ts
