[package]
name = "windows-search-tool"
version = "1.0.0"
description = "A fast, minimal, non-admin Windows search utility built with Tauri 2, Rust, and React."
authors = ["Pranav Raizada"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
fuzzy-matcher = "0.3"
image = "0.25"
base64 = "0.22"
winreg = "0.52"
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Foundation", "Win32_System_Com", "Win32_Storage_FileSystem", "Win32_System_DataExchange", "Win32_System_LibraryLoader"] }
meval = "0.2.0"
tauri-plugin-clipboard-manager = "2.3.2"
arboard = "3.6.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
